--- a/src/common/scss/base.scss
+++ b/src/common/scss/base.scss
@@ -2,6 +2,7 @@ body, html{
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 }
 
 html {
@@ -10,4 +11,9 @@ html {
 
 *, *:before, *:after {
   box-sizing: inherit;
+}
+
+h1, p {
+  margin: 0;
+  padding: 0;
 }
