--- a/src/common/scss/variable.scss
+++ b/src/common/scss/variable.scss
@@ -3,6 +3,8 @@ $color-bg-dark: #324157;
 $color-bg-dark-d: #1F2D3D;
 $color-bg-light: #EEF1F6;
 $color-text-dark-white: #F9FAFC;
+$color-text-silver: #8492A6;
 
-// 字体
+// 字体大小
 $font-size-large-x: 22px;
+$font-size-medium: 14px;
