--- a/src/common/scss/mixins.scss
+++ b/src/common/scss/mixins.scss
@@ -3,3 +3,10 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin transformCenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
