--- a/src/common/scss/mixins.scss
+++ b/src/common/scss/mixins.scss
@@ -10,3 +10,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+@mixin boxShadow {
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.12), 
+              0 0 6px 0 rgba(0,0,0,.04);
+}
