--- a/src/common/scss/variable.scss
+++ b/src/common/scss/variable.scss
@@ -2,9 +2,12 @@
 $color-bg-dark: #324157;
 $color-bg-dark-d: #1F2D3D;
 $color-bg-light: #EEF1F6;
+$color-bg-dark-white: #F9FAFC;
 $color-text-dark-white: #F9FAFC;
 $color-text-silver: #8492A6;
+$color-text-light-black: #475669;
 
 // 字体大小
 $font-size-large-x: 22px;
 $font-size-medium: 14px;
+$font-size-small: 12px;
