button color var

--- a/src/common/scss/variable.scss
+++ b/src/common/scss/variable.scss
@@ -3,6 +3,7 @@ $color-bg-dark: #324157;
 $color-bg-dark-d: #1F2D3D;
 $color-bg-light: #EEF1F6;
 $color-bg-dark-white: #F9FAFC;
+$color-button-light-blue: #58B7FF;
 $color-text-dark-white: #F9FAFC;
 $color-text-silver: #8492A6;
 $color-text-light-black: #475669;
