--- a/src/common/scss/variable.scss
+++ b/src/common/scss/variable.scss
@@ -3,6 +3,7 @@ $color-bg-dark: #324157;
 $color-bg-dark-d: #1F2D3D;
 $color-bg-light: #EEF1F6;
 $color-bg-dark-white: #F9FAFC;
+$color-bg-blue: #20A0FF;
 $color-button-light-blue: #58B7FF;
 $color-text-dark-white: #F9FAFC;
 $color-text-silver: #8492A6;
@@ -10,5 +11,6 @@ $color-text-light-black: #475669;
 
 // 字体大小
 $font-size-large-x: 22px;
+$font-size-medium-x: 16px;
 $font-size-medium: 14px;
 $font-size-small: 12px;
